# eq-command-center

./: .gitignore  README.md  config.example.yaml  pyproject.toml
docs/: story-workflow.md  testing-policy.md
docs/UI-spec/: UI-spec.md
docs/data-model/: data-model.sql  lucy-raw-notes.md
docs/project-brief/: project-brief.txt
docs/to-do-list/: 01-backend-local-api-foundation.md  02-backend-dashboard-summary-krono.md  03-backend-deals-endpoint.md  04-backend-listings-endpoints.md  05-backend-items-tooltip-prices.md  06-frontend-scaffold-shadcn.md  07-frontend-layout-navigation-refresh.md  (+25 more)
eqmarket/: __init__.py  __main__.py  db.py  enrichment.py  inventory_importer.py  inventory_watcher.py  item_preferences.py  item_resolution.py  local_settings.py  log_importer.py  log_parser.py  log_watcher.py  price_importer.py  price_repair.py  review_rules.py  sales_importer.py  slot_masks.py
scripts/: run_tests.py  smoke_api.py
tests/: test_api_app.py  test_api_character_upgrades.py  test_api_characters.py  test_api_cli.py  test_api_contracts.py  test_api_dashboard.py  test_api_db.py  test_api_deals.py  test_api_edge_cases.py  test_api_inventory_sell_candidates.py  test_api_items.py  test_api_listings.py  test_api_price_refresh.py  test_api_settings.py  test_inventory_enrichment_price_targets.py  test_inventory_importer.py  test_inventory_watcher.py  test_log_parser_fixtures.py  test_log_watcher.py  test_price_repair.py  test_slot_masks.py  test_tlp_sales_sync.py
web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+70 files in other folders)
