[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eq-command-center"
version = "0.1.0"
description = "Local EverQuest market scanner and gear finder"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "lxml>=5.0",
    "PyYAML>=6.0",
]

[project.scripts]
eqmarket = "eqmarket.__main__:main"

[tool.setuptools.packages.find]
include = ["eqmarket*"]
